Adopt yangtools.databind
The most significant fallout here is that ErrorInfo is now a sealed
interface with one specialization: hence we use switch-based dispatch
to future-proof our code.

Change-Id: I0d8c35db6ff1effdef33badf7bdf5e9cb0754635
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>